# greek-room

./: .gitignore  .gitmodules  LICENSE  README.md  how-to-release.md  index.html  index.xml  setup.py  sitemap.xml  wrangler.toml
.github/workflows/: deploy-pages.yml
align/: index.html
categories/: index.html  index.xml
css/: styles.231b2b35f2b8c811b6f865eef56c9d22ef2facc90b796a082b4f87c6a91ecb6d.css  styles.aa78354a9f25deb29a74acf87b31f5a17c209eccae587b66f30043d9282ee2f3.css
ephesus/: Dockerfile  README.md  pyproject.toml  requirements.txt
ephesus/cron/: crontab  greek-room-keycloak-db-backup.config  greek-room-keycloak-db-backup.sh
ephesus/docker-compose/: backup.env  docker-compose.yml  ephesus.env  keycloak.env  oauth2proxy.env  postgres.env  redis-users.acl
ephesus/ephesus/: config.py  constants.py  dependencies.py  exceptions.py  main.py
ephesus/ephesus/auth/: routes.py
ephesus/ephesus/common/: utils.py
ephesus/ephesus/database/: alembic.ini  crud.py  custom.py  models.py  schemas.py  seed.py  setup.py
ephesus/ephesus/database/alembic/: env.py
ephesus/ephesus/database/alembic/versions/: 6451aba248d3_add_project_self_referential_foreign_key.py  f005dd0c1a47_add_language_name_column.py
ephesus/ephesus/database/models/: user_projects.py
ephesus/ephesus/home/: routes.py  ui_routes.py
ephesus/ephesus/home/static/home/: greekroom.css  greekroom.js
ephesus/ephesus/home/templates/home/: base.html  index.html  project_overview.fragment
ephesus/ephesus/spell/: routes.py
ephesus/ephesus/spell/core/: editor.py  editor_utils.py  spell_check_utils.py
ephesus/ephesus/spell/static/spell/: spell.css  spell.js
ephesus/ephesus/spell/templates/spell/: chapter.fragment  editor-pane.html  editor.fragment  verse.fragment
ephesus/ephesus/wildebeest/: routes.py
ephesus/ephesus/wildebeest/core/: wildebeest_util.py
ephesus/ephesus/wildebeest/templates/wildebeest/: analysis.fragment
greekroom/: README.md  __init__.py  __main__.py  how-to-release.md  pyproject.toml
greekroom/gr_utilities/: __init__.py  color_diff.py  general_util.py  html_util.py  wb_file_props.py  wb_util.py
greekroom/gr_utilities/test/: test_wb_file_props.py  test_wb_util.py
greekroom/greekroom/gr_utilities/: general_util.py  html_util.py  wb_file_props.py
greekroom/greekroom/gr_utilities/test/: test_wb_file_props.py
greekroom/greekroom/owl/: repeated_words.py
greekroom/greekroom/owl/data/: legitimate_duplicates.jsonl
greekroom/greekroom/owl/data/samples_inputs/: ceb_01.json
greekroom/greekroom/usfm/: Bible_USFM_explanations.txt  Bible_USFM_tag_data.jsonl  README.md  ualign_utilities.py  usfm_check.py
greekroom/greekroom/versification/: README.md  diff_vref.py  extract_vref_txt_from_usfm_extract_jsonl.py  verse_diff.py  verse_inspection.py  versification.py  versification_diff_html.py  versification_diff_txt.py
greekroom/greekroom/versification/data/: psalm-descriptive-titles.txt
greekroom/greekroom/versification/data/standard_mappings/: README.md  eng.json  lxx.json  org.json  rsc.json  rso.json  vul.json
greekroom/greekroom/versification/logs/: README.md  versification_data_log_orig_mappings.txt  versification_data_log_v20251008.txt
greekroom/owl/: README.md  __init__.py  repeated_words.py
html/eng-hin/: MAT-001.html
instance/: config.cfg
js/: script-early.2d6255816e36e34bd1948dc5c26ede35687a256c4e2e516e0cd75f383a510c6a.js
site/: README.md  hugo.yaml
spell/: index.html
tags/: index.html  index.xml
utilities/: filter-viz-snt-align.py  parallel-corpus-prep.py  parallel-corpus-to-triple-pipe-format.py  ualign.py
web/: gunicorn_cfg.py  requirements.txt
wildebeest/: index.html
(+129 files in other folders)
