[project]
name = "ephesus"
version = "0.1.0"
description = "Greek Room Web API and Reference Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.16.1",
    "babel==2.17.0",
    "fastapi==0.115.12",
    "jinja2==3.1.6",
    "pydantic-settings==2.9.1",
    "python-multipart==0.0.20",
    "redis==6.1.0",
    "sil-machine==1.7.0",
    "sqlalchemy==2.0.41",
    "uvicorn[standard]==0.34.2",
    "wildebeest-nlp==0.9.2",
]
